# urban-air-quality-intelligence-system

./: .ci_heartbeat  .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: dashboard.py  live.py  main.py  main.py.bak  main.py.bak.1756489886  main.py.bak.1756491997
app.backup.20250901-130134/: dashboard.py  main.py  main.py.backup  main.py.backup_pre_models  main.py.fixbak
data/raw/: Bengaluru_openweathermap_2024-08-17_2024-08-24.csv  Bengaluru_visualcrossing_2024-08-17_2024-08-24.csv  Chennai_openweathermap_2024-08-17_2024-08-24.csv  Chennai_visualcrossing_2024-08-17_2024-08-24.csv  Delhi_openweathermap_2024-08-17_2024-08-24.csv  Delhi_visualcrossing_2024-08-17_2024-08-24.csv  Hyderabad_visualcrossing_2024-08-17_2024-08-24.csv  Kolkata_openweathermap_2024-08-17_2024-08-24.csv  Kolkata_visualcrossing_2024-08-17_2024-08-24.csv  Mumbai_openweathermap_2024-08-17_2024-08-24.csv  (+10 more)
notebooks/: 01_data_collection_and_eda.ipynb  02_pollution_patterns.ipynb  03_predictive_modeling.ipynb  04_anomaly_and_health.ipynb
reports/: README.md  assoc_rules_chennai.csv  patterns_bengaluru.md  patterns_chennai.md  patterns_delhi.md  patterns_hyderabad.md  patterns_kolkata.md  patterns_mumbai.md  patterns_vellore.md  patterns_velore.md  patterns_vizag.md  seasonal_bengaluru.csv  seasonal_chennai.csv  seasonal_delhi.csv  seasonal_hyderabad.csv  seasonal_kolkata.csv  seasonal_mumbai.csv  seasonal_vellore.csv  seasonal_velore.csv  seasonal_vizag.csv
src/: __init__.py
tests/: conftest.py  test_feature_engineering.py  test_live_fetch.py  test_utils.py
(+19 files in other folders)
